<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:stretchColumns="1"
    android:padding="30dp">
<TableRow>
    <TextView android:text="@string/tv_tel" android:layout_width="wrap_content"  android:layout_height="wrap_content"
        android:textColor="#fbfa8907"
        android:textStyle="bold" />
    <com.andreabaccega.widget.FormEditText  whatever:testType="phone" whatever:emptyErrorString="@string/emptyError"
        android:id="@+id/edt_login_tel" android:hint="@string/edt_hint_tel" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content"
        android:inputType="phone"
        android:textSize="12dp" />
</TableRow>
    <TableRow>
    <TextView android:text="@string/tv_inputPwd" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#fbfa8907" />
    <EditText android:id="@+id/edt_login_pwd" android:inputType="textWebPassword" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:hint="@string/verAndPwd"
        android:textSize="12dp" />
</TableRow>
    <TableRow>
    <TextView android:text="@string/tv_verification" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textColor="#fbfa8907"
        android:textStyle="bold" />
    <EditText android:id="@+id/edt_login_ver" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:hint="@string/verAndPwd"
        android:textSize="12dp" />
</TableRow>

    <LinearLayout android:layout_gravity="center" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="20dp">
        <ImageButton android:id="@+id/btn_getVer_login" android:background="@drawable/yanzheng" android:text="@string/tv_getVerification" android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:paddingRight="10dp" />
        <ImageButton android:id="@+id/btn_login" android:background="@drawable/login" android:layout_width="wrap_content" android:text="@string/btn_login" android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
        <ImageButton android:id="@+id/btn_reg_in_login" android:background="@drawable/reg" android:text="@string/btn_reg" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</TableLayout>
