<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:stretchColumns="1">
    <TableRow>
        <TextView android:text="@string/tv_simple_title" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@+id/tv_record_title" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tv_pay" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@+id/tv_record_pay" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/tv_giveHelpName" android:text="@string/showRecord_helperName" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@+id/tv_record_helperName" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/tv_giveHelpTel" android:text="@string/showRecord_helperTel" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@+id/tv_record_helperTel" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tv_context" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView android:layout_span="2" android:id="@+id/tv_record_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <Button android:id="@+id/btn_delete" android:text="@string/showRecord_btn_delete" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <Button android:id="@+id/btn_complete" android:text="@string/showRecord_btn_complete" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <!--<Button android:id="@+id/btn_modify" android:text="@string/showRecord_btn_modify" android:layout_width="wrap_content" android:layout_height="wrap_content" />-->
    </TableRow>
</TableLayout>
