<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:stretchColumns="1"
    android:background="#9ff0f806" android:gravity="center"
    android:paddingLeft="15dp">

<TableRow>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/tv_simple_title"
        android:textStyle="bold"
        android:textColor="#f1f4721b"
        android:layout_marginLeft="15dp" />

</TableRow>
    <TableRow>
        <com.andreabaccega.widget.FormEditText app:testType="nocheck" app:emptyErrorString="@string/emptyError" android:id="@+id/edt_simple_title" android:layout_height="wrap_content" android:layout_width="0dp" android:layout_weight="1" android:hint="@string/edt_simpleTitle" android:maxLines="2"
            android:inputType="text"
            android:textSize="12dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

    </TableRow>
<TableRow>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/tv_pay"
        android:textStyle="bold"
        android:textColor="#f1f4721b"
        android:layout_marginLeft="15dp" />

</TableRow>
    <TableRow>
        <com.andreabaccega.widget.FormEditText app:testType="nocheck" app:emptyErrorString="@string/emptyError" android:id="@+id/edt_pay" android:layout_height="wrap_content" android:inputType="numberDecimal" android:layout_width="0dp" android:layout_weight="1" android:hint="@string/edt_pay" android:maxLines="1"
            android:textSize="12dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

    </TableRow>
<TableRow>
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/tv_context"
        android:textStyle="bold"
        android:textColor="#f1f4721b"
        android:layout_marginLeft="15dp" />

</TableRow>
    <TableRow>
        <com.andreabaccega.widget.FormEditText app:testType="nocheck" app:emptyErrorString="@string/emptyError" android:id="@+id/edt_detail" android:layout_height="wrap_content" android:layout_width="0dp" android:layout_weight="1" android:hint="@string/edt_context" android:maxLines="10"
            android:textSize="12dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

    </TableRow>

    <Button android:id="@+id/btn_submit" android:text="@string/btn_submit" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:background="#9ff0f806"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:textColor="#f60d0d" />

</TableLayout>
