<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:stretchColumns="1">

    <TableRow>
        <TextView android:text="@string/tv_simple_title" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@+id/tv_item_title" android:layout_width="wrap_content"   android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tv_pay" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@+id/tv_item_pay" android:layout_width="wrap_content"   android:layout_height="wrap_content" />
        <TextView android:text="@string/tv_when_request" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@+id/tv_when" android:layout_width="wrap_content"   android:layout_height="wrap_content" />

    </TableRow>
    <TableRow>
        <TextView android:text="@string/tv_context" android:layout_width="match_parent" android:layout_height="wrap_content"  />
        <TextView android:id="@+id/tv_station" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="right" android:layout_gravity="right"
            android:textColor="#f8a8a8" />
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/tv_item_detail" android:layout_width="wrap_content" android:layout_span="2" android:layout_height="wrap_content" android:maxLines="2" />
    </TableRow>

</TableLayout>
