<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical"
    android:gravity="center_horizontal">
<TextView
    android:text="即时帮（原“顺便帮”）"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:gravity="center"
    android:textColor="#1576f5"
    android:textStyle="bold" />
    <TextView
        android:text="@string/aboutNearHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />
    <TextView
        android:text="@string/coryright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />
    <TextView
        android:text="@string/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#5896ed" />
</LinearLayout>
