<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:whatever="http://schemas.android.com/apk/res-auto" android:stretchColumns="1"
    android:background="#9ff0f806">
<TableRow>
    <TextView android:text="@string/change_pwd" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textStyle="bold" />
    <com.andreabaccega.widget.FormEditText whatever:testType="nocheck" android:id="@+id/edt_change_pwd" android:inputType="textWebPassword" android:layout_height="wrap_content" android:maxLines="1"
        android:longClickable="false" />
</TableRow>

    <TableRow>
    <TextView android:text="@string/change_pwd" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:textStyle="bold" />
    <com.andreabaccega.widget.FormEditText whatever:testType="nocheck" android:id="@+id/edt_change_pwd_repeat" android:inputType="textWebPassword" android:layout_height="wrap_content" android:maxLines="1" />
</TableRow>
<TableRow>
    <TextView android:text="@string/chang_tel_ver" android:layout_width="wrap_content" android:maxLines="1"
        android:textStyle="bold" />
    <com.andreabaccega.widget.FormEditText whatever:testType="nocheck" android:id="@+id/edt_change_pwd_ver" android:layout_height="wrap_content" android:maxLines="1" />
</TableRow>
<TableRow>
    <Button android:id="@+id/btn_change_pwd_getVer" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/tv_getVerification"
        android:background="#9ff8b406" />
    <Button android:id="@+id/btn_change_pwd" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/btn_chang_submit"
        android:background="#9ff8b406"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
</TableRow>

    <TableRow>
        <TextView android:text="@string/chang_tel_curNum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1"
            android:textStyle="bold" />
        <com.andreabaccega.widget.FormEditText whatever:testType="phone" android:inputType="phone" android:id="@+id/edt_change_curNumber" android:layout_height="wrap_content" android:maxLines="1"
            android:autoText="false" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/chang_tel_newNum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1"
            android:textStyle="bold" />
        <com.andreabaccega.widget.FormEditText whatever:testType="phone" android:inputType="phone" android:id="@+id/edt_change_newNumber" android:layout_height="wrap_content" android:maxLines="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/tv_inputPwd" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textStyle="bold" />
        <com.andreabaccega.widget.FormEditText whatever:testType="nocheck" android:id="@+id/edt_change_tel_curPwd" android:inputType="textWebPassword" android:layout_height="wrap_content" android:maxLines="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/chang_tel_ver" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textStyle="bold" />
        <com.andreabaccega.widget.FormEditText whatever:testType="nocheck" android:maxLines="1" />
    </TableRow>
    <TableRow>
        <Button android:id="@+id/btn_change_tel_getVer" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/tv_getVerification"
            android:background="#9ff8b406" />
        <Button android:id="@+id/btn_change_tel" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/btn_chang_submit"
            android:background="#9ff8b406"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/info_name" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textStyle="bold" />
        <com.andreabaccega.widget.FormEditText whatever:testType="nocheck" android:id="@+id/edt_add_realName" android:inputType="textWebPassword" android:layout_height="wrap_content" android:maxLines="1" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/info_ID" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textStyle="bold" />
        <com.andreabaccega.widget.FormEditText whatever:testType="nocheck" android:id="@+id/edt_add_realID" android:inputType="textWebPassword" android:layout_height="wrap_content" android:maxLines="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/info_payAccount" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textStyle="bold" />
        <com.andreabaccega.widget.FormEditText whatever:testType="nocheck" android:id="@+id/edt_add_payAccount" android:inputType="textWebPassword" android:layout_height="wrap_content" android:maxLines="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/chang_tel_ver" android:layout_width="wrap_content" android:maxLines="1"
            android:textStyle="bold" />
        <com.andreabaccega.widget.FormEditText whatever:testType="nocheck" android:id="@+id/edt_add_ver" android:layout_height="wrap_content" android:maxLines="1"/>
    </TableRow>
    <TableRow>
        <Button android:id="@+id/btn_add_ID_getVer" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/tv_getVerification"
            android:background="#9ff8b406" />
        <Button android:id="@+id/btn_add_nameIDAccount" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/btn_chang_submit"
            android:background="#9ff8b406"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />
    </TableRow>
</TableLayout>
